# bloggo

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yaml
example/assets/: index.css
example/posts/: a_case_of_identity.md  a_scandal_in_bohemia.md  the_boscombe_valley_mystery.md  the_five_orange_pips.md  the_red_headed_league.md
example/templates/: header.html.hbs  index.html.hbs  post.html.hbs
src/: atom.rs  error.rs  fs.rs  helper.rs  lib.rs  main.rs  value.rs
