[package]
name = "bloggo"
version = "0.1.0"
edition = "2021"

[dependencies]
handlebars = "4.3.6"
serde = "1.0.152"
serde_yaml = "0.9.16"
toml = "0.5.10"
pulldown-cmark = "0.9.2"

[dependencies.log]
version = "0.4.17"
features = ["max_level_trace"]

[dependencies.env_logger]
version = "0.10.0"
default-features = false

[dependencies.clap]
version = "4.1.1"
default-features = false
# "color" feature pulls in more dependencies than we need.
features = ["cargo", "error-context", "help", "std", "suggestions", "usage"]
