[package]
name = "bloggo"
version = "1.0.0-pre.1"
edition = "2021"

[dependencies]
serde = "1.0.152"
serde_yaml = "0.9.17"
toml = "0.5.11"
pulldown-cmark = "0.9.2"
serde_json = "1.0.91"

[dependencies.log]
version = "0.4.17"
features = ["max_level_trace"]

[dependencies.env_logger]
version = "0.10.0"
default-features = false

[dependencies.clap]
version = "4.1.1"
default-features = false
# "color" feature pulls in more dependencies than we need.
features = ["cargo", "error-context", "help", "std", "suggestions", "usage"]

[dependencies.chrono]
version = "0.4.23"
default-features = false
features = [ "std" ]

[dependencies.handlebars]
version = "4.3.6"
features = ["dir_source"]
