[package]
name = "bloggo"
version = "1.0.1"
edition = "2021"

[dependencies]
serde = "1.0.198"
serde_yaml = "0.9.34"
toml = "0.8.12"
pulldown-cmark = "0.10.3"
serde_json = "1.0.116"

[dependencies.log]
version = "0.4.21"
features = ["max_level_trace"]

[dependencies.env_logger]
version = "0.11.3"
default-features = false

[dependencies.clap]
version = "4.5.4"
default-features = false
# "color" feature pulls in more dependencies than we need.
features = ["cargo", "error-context", "help", "std", "suggestions", "usage"]

[dependencies.chrono]
version = "0.4.38"
default-features = false
features = [ "std" ]

[dependencies.handlebars]
version = "5.1.2"
features = ["dir_source"]
